# Bank-CreditCardFraud-MOA-Explainability

./: .gitattributes  README.md  pyproject.toml
data/processed_data/: creditcard_prepared.csv
data/train/: train_data.csv
models/mlruns/0/: meta.yaml
models/moa_model/: MLmodel  model.pkl  requirements.txt
notebooks/: demo.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/172819036227013896/: meta.yaml
notebooks/mlruns/172819036227013896/141a1419447e428f91f152ae913ddfed/: meta.yaml
notebooks/mlruns/172819036227013896/1438148fba594d2883279240bb44e0e4/: meta.yaml
notebooks/mlruns/172819036227013896/3704a72f55674fd8814cc1a0a6d5410b/: meta.yaml
notebooks/mlruns/172819036227013896/3ed1005430d34f34ba10de6b79a0d5b0/: meta.yaml
notebooks/mlruns/172819036227013896/420f2fc8a6ed4386a36237572b96ae5e/: meta.yaml
notebooks/mlruns/172819036227013896/42a71ec956f84c55a504f4c844adec62/: meta.yaml
notebooks/mlruns/172819036227013896/8cfcf9becdb94878b70a8ec8fad74bcf/: meta.yaml
notebooks/mlruns/172819036227013896/94ca6088539e47bebc1a25bf368f26b3/: meta.yaml
notebooks/mlruns/172819036227013896/bd7c6f69b1984960bceb2c2117723ce7/: meta.yaml
notebooks/mlruns/172819036227013896/e55f200df10c487b9670c1bd44733f8e/: meta.yaml
src/: app.py  main.py
src/features/: data_preparation.py  eda.py
src/mlruns/0/: meta.yaml
src/mlruns/925247871961684277/: meta.yaml
src/model/: enhanced_prediction.py  mixture_of_agents.py  prediction.py  togetherAI.py
src/utils/: decorators.py  logging_setup.py
(+64 files in other folders)
